[package]
name = "cratermaker-components"
version = "2025.10.1-a22+gb24916a7"
edition = "2021"


[dependencies]
itertools = "0.14.0"
rand = "0.9.1"
noise = "0.9.0"
rand_chacha = "0.9.0"
numpy = "0.27"
ndarray-linalg = {version = "0.18", features = ["openblas-system"]}
rayon = "1.11"
pyo3= {version = "0.27", features = ["extension-module"]}


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemallocator]
version = "0.6"
features = [ "disable_initial_exec_tls",]

